--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,21 @@
 /* #endregion Common */
 
 /* #region Utilities */
+.container {
+    width: 90%;
+    height: 90vh;
+    margin: auto;
+    margin-top: 2.5rem;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.column-7{
+    width: calc((100%/14) *2);
+    padding: 0.3rem 0.15rem;
+}
 
 /* #endregion Utilities */
 
@@ -23,4 +38,6 @@
 
 /* Site-main */
 
+
+   
 /* Site-footer */
