--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,13 +64,34 @@ body{
     padding:  0.3rem 0.3rem;
     margin-right: 0.3rem;
     border-radius: 0.3rem;   
+    font-size: 0.5rem;
 }
 .arrows{
     margin: 0.3rem;
     background-color: lightgray;
-    padding:  0.3rem 0.3rem;
+    padding:  0.1rem;
     margin-right: 0.3rem;
     border-radius: 0.3rem; 
 }
    
 /* Site-footer */
+#site-footer{
+    background-color: var(--zoom-dark);
+    color: white;
+    width: 100%;
+    height: 60px;
+}
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.left-nav{
+    
+}
+.center-nav{
+    
+}
+.right-nav{
+    
+}
