--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ body{
     bottom: 0.2rem;
     left: 0;
 }
+.icon{
+    padding: 1rem;
+    text-align: center;
+}
 
 /* #endregion Utilities */
 
@@ -87,7 +91,8 @@ body{
     align-items: center;
 }
 .left-nav{
-    
+    display: flex;
+    align-items: center;
 }
 .center-nav{
     
